# GSH

./: cargo.toml
font_renderer/: Cargo.toml
font_renderer/src/: lib.rs  main.rs
frontend/: .gitignore  Cargo.toml
frontend/src/: front_end_api.rs  main.rs  renderer.rs
frontend/src/data/: quad.frag  quad.vert
frontend/src/front_end_api/: front_end.rs  gpu.rs
frontend/src/front_end_api/front_end/: terminal.rs
frontend/src/front_end_api/front_end/terminal/: io.rs  render_surfaces.rs
frontend/src/renderer/: render_texture.rs
parser/: Cargo.toml  readme.md
parser/src/: deserializer.rs  lib.rs  serializer.rs  to_binary.rs
prototype_render_api/: Cargo.toml
prototype_render_api/src/: lib.rs  prototype.rs
shell_to_gsh/: Cargo.toml  readme.md
test_app/: Cargo.toml
test_app/src/: main.rs
view/: Cargo.toml
view/src/: lib.rs
