[package]
name = "font_renderer"
version = "0.1.0"
authors = ["Nicholas Alexeev <nickalexeev@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-kit="0.10.0"
image = "0.23"
pathfinder_geometry = "0.5.1"
nalgebra = "0.22.0"